<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

    <item android:id="@+id/action_weather"
        android:title="@string/action_weather"
        app:showAsAction="never"/>

    <item android:id="@+id/action_send_email"
        android:title="@string/action_send_email"
        app:showAsAction="never"/>

    <item android:id="@+id/action_add_todo"
        android:title="@string/action_add_todo"
        app:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_add"></item>

    <item android:id="@+id/action_tips"
        android:title="@string/action_tips"
        app:showAsAction="never"/>

</menu>